Feat: insert reference

--- a/article/sbc-template.tex
+++ b/article/sbc-template.tex
@@ -120,7 +120,9 @@ Os Princípios REST (Representational State Transfer), introduzidos por Roy Fiel
 		\bibitem{cavaleiro2013} CAVALEIRO, A. F. S. *Estilo Arquitetural REST para Criação de Web Services*. Fundação Educacional do Município de Assis, 2013.
 		\bibitem{fielding2000} FIELDING, R. T. *Architectural Styles and the Design of Network-based Software Architectures*. University of California, 2000.
 		\bibitem{newman2015} NEWMAN, S. *Building Microservices: Designing Fine-Grained Systems*. O'Reilly Media, 2015.
-		\bibitem{castro2021} CASTRO, T. F. de S.; VALE, F. G. de M.; SOUSA, F. H. F. de. Microsserviços. *Brazilian Journal of Development*, v. 7, n. 3, p. 21829-21833, mar. 2021.		
+		\bibitem{castro2021} CASTRO, T. F. de S.; VALE, F. G. de M.; SOUSA, F. H. F. de. Microsserviços. *Brazilian Journal of Development*, v. 7, n. 3, p. 21829-21833, mar. 2021.
+		\bibitem{newcomer2002} NEWCOMER, E. *Understanding Web Services: XML, WSDL, SOAP, and UDDI*. Addison-Wesley Professional, 2002.
+				
 	\end{thebibliography}
 	
 \end{document}
